# src/main/resources/static/openapi.yaml
@@ -42,7 +42,7 @@ paths:
                 $ref: '#/components/schemas/JwtTokenResponse'
         '401':
           description: Invalid email or password
-  /secret-notes:
+  /notes:
     get:
       summary: List all secret notes
       responses:
@@ -70,7 +70,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/SecretNote'
 
-  /secret-notes/{id}:
+  /notes/{id}:
     get:
       summary: Get a secret note by ID
       parameters:
@@ -182,6 +182,14 @@ components:
         - title
         - content
         - createdAt
+
+    SecretNotePublicLink:
+      type: object
+      properties:
+        link:
+          type: string
+      required:
+        - link
 
     SecretNoteCreateRequest:
       type: object
